recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: '=' expected but ';' found.
var steps;
         ^Spiral:4: error: '=' expected but ';' found.
var length;
          ^